# subspy

./: .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt  subs.py
.github/workflows/: ci.yml  release.yml
tests/: test_subs.py
